--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,7 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
-
-# production
+# builds
 /build
 
 # misc
@@ -18,6 +11,12 @@
 .env.test.local
 .env.production.local
 
+# loggar
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# editorfiler
+.vscode/
+.idea/
+
